2017-05-01  David Kilzer  <ddkilzer@apple.com>

        [Cocoa] Replace uses of [get…Class() alloc] in TestWebKitAPI
        <https://webkit.org/b/171493>

        Reviewed by Dan Bernstein.

        * TestWebKitAPI/Tests/WebKit/ios/AudioSessionCategoryIOS.mm:
        Remove UIKit soft-link since TestWebKitAPI links to
        UIKit.framework.
        (TestWebKitAPI::WebKit1_AudioSessionCategoryIOS_Test): Use
        UIWindow and UIWebView classes directly.
        * TestWebKitAPI/Tests/WebKit2Cocoa/RequiresUserActionForPlayback.mm:
        Remove UIKit soft-link since TestWebKitAPI links to
        UIKit.framework.
        (RequiresUserActionForPlaybackTest::createWebView): Use UIWindow
        class directly.

2017-05-01  Brady Eidson  <beidson@apple.com>

        Update names in WKURLSchemeHandler/WKURLSchemeHandlerTask APIs.
        <rdar://problem/31824838> and https://bugs.webkit.org/show_bug.cgi?id=171508

        Reviewed by Andy Estes.

        * TestWebKitAPI/Tests/WebKit2Cocoa/WKURLSchemeHandler-1.mm:
        (-[SchemeHandler webView:startURLSchemeTask:]):
        (-[SchemeHandler webView:stopURLSchemeTask:]):
        (-[SchemeHandler webView:startTask:]): Deleted.
        (-[SchemeHandler webView:stopTask:]): Deleted.

2017-05-01  Jason Marcell  <jmarcell@apple.com>

        Add a new function for getting the Git hash for a pure git directory.
        https://bugs.webkit.org/show_bug.cgi?id=171450

        Reviewed by David Kilzer.

        * Scripts/VCSUtils.pm:
        (gitHashForDirectory):

2017-05-01  Joanmarie Diggs  <jdiggs@igalia.com>

        [ATK] Expose values of aria-rowcount, aria-colcount, aria-rowindex, aria-colindex, aria-rowspan, and aria-colspan as object attributes
        https://bugs.webkit.org/show_bug.cgi?id=171496

        Reviewed by Chris Fleizach.

        Add new attribute names so that the values of the object attributes can be tested.

        * WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp: